Services/monitoring/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.zlaya.tech`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
      middlewares:
        # - name: oidc-auth
          # namespace: monitoring
        - name: default-headers
          namespace: default
  tls: {}
